# agentic-ai-hr-automation-agent-python-langgraph-recruitment-workflow

./: .dockerignore  .gitignore  AUTHENTICATION_IMPLEMENTATION.md  AZURE_OPENAI_INTEGRATION.md  CHANGELOG.md  Dockerfile  FEATURES.md  FRONTEND_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MINIO_INTEGRATION.md  QUICK_REFERENCE.md  README.md  TECHNICAL_FRAMEWORK.md  VERIFICATION_GUIDE.md  docker-compose.prod.yml  docker-compose.yml  env.example  init-postgres.sh  init_auth_db.py  pyproject.toml  test_azure_openai.py  verify_system.py
backend/: README.md  config.py  extended_notifications.py  main.py  webhook_integration.py
backend/api/: __init__.py  auth.py  dashboard.py
backend/api/routes/: __init__.py  batch.py  candidates.py  common.py  cv.py  dashboard_stats.py  export.py  jobs.py  my_resumes.py
backend/core/: __init__.py  database.py  dependencies.py  mongodb.py  seed.py
backend/crud/: __init__.py  user.py
backend/models/: user.py
backend/schemas/: __init__.py  auth.py  hr.py  hr_api.py
backend/services/: __init__.py  llm_provider.py  security.py
backend/services/hr/: __init__.py  automation.py  batch_processing.py  data_export.py  data_extraction.py  skills_match.py  upload_service.py
backend/services/hr/graph/: __init__.py  cv_extraction_workflow.py  job_evaluation_workflow.py
backend/services/hr/graph/nodes/: __init__.py  cv.py  evaluation.py  job_skills.py  notifications.py  persistence.py  upload.py
backend/services/storage/: __init__.py  minio_storage.py
backend/utils/: ulid_helper.py
docs/: AZURE_OPENAI_SETUP.md  MINIO_SETUP.md
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: BatchPage.tsx  CVUploadPage.tsx  CandidateDetailPage.tsx  CandidatesPage.tsx  HomePage.tsx  JobDetailPage.tsx  JobsPage.tsx  ResumeDetailPage.tsx  ResumesPage.tsx
src/: __init__.py  auth_routes.py  batch_processing.py  config.py  dashboard_api.py  data_extraction.py  data_models.py  database.py  dependencies.py  extended_notifications.py  fastapi_api.py  google_cloud.py  google_services.py  hr_automation.py  llm_provider.py  minio_storage.py  security.py  upload_service.py
src/crud/: user.py
src/models/: __init__.py  user.py
